Update 05장 시스템 부팅과 종료.md

--- a/01. Linux/05장 시스템 부팅과 종료.md
+++ b/01. Linux/05장 시스템 부팅과 종료.md
@@ -1,1 +1,52 @@
 # 시스템 부팅과 종료
+
+<br/>
+
+## 시스템 부팅
+### 시스템 부팅 과정
+전원 on -> BIOS -> 부트 로더 -> 커널 -> systemd 서비스 -> 로그인 프롬프트
+
+- 부트로더: OS가 시동되기 전 커널이 올바르게 작동할 수 있도록 필요한 모든 관련 작업을 수행
+
+### BIOS 단계
+하드웨어 검사 -> 부팅 장치 선택 -> MBR 로드 -> 2차 부트 로더 로드
+
+부팅하면 가장 먼저 BIOS(Basic Input/Output System)가 동작한다.  
+BIOS는 PC에 장착된 기본적인 하드웨어(키보드, 디스크 등)의 상태를 확인한 후 부팅 장치(ex. 하드 디스크)를 선택하여 부팅 디스크의 첫 섹터에서 512 바이트를 로딩한다.  
+이 512 바이트에 2차 부트 로더(ex. GRUB)의 위치를 저장한 1차 부트 로더 MBR(Master Boot Record)가 있다.
+
+### 부트 로더 단계
+대표적인 2차 부트 로더로는 GRUB(GRand Unified Bootloader)와 LILO(LInux LOader)가 있다. LILO는 예전 방식이다.  
+
+MBR이 부트 로더를 찾아 로딩하고 시스템 제어권을 부트 로더에게 넘기면 부트 로더는 부팅할 커널을 선택할 수 있도록 메뉴를 제공한다.  
+부트 로더는 선택된 Linux 커널 이미지를 로딩하고 시스템 제어권을 커널에게 넘긴다.
+
+Linux 커널 이미지는 /boot 디렉터리 아래에 'vmlinuz-버전명'의 형태로 제공된다.
+
+### 커널 단계
+커널이 메모리상에서 실행되면, 하드웨어(모리, 디스크, 키보드, 마우스 등 장치들)를 점검한다.  
+커널은 루트 파일 시스템을 마운트 하는데, 이때 부트 로더의 설정 파일에 명시된 파티션을 루트 파일 시스템으로 마운트 시킨다.  
+만약 마운트 실패시 “커널 패닉” 메세지를 출력한다.
+
+기본적인 초기화 과정이 끝나면 fork를 사용하지 않고 생성되는 프로세스와 스레드를 생성한다.  
+이 프로세스들은 메모리 관리 같은 커널의 여러 동작을 수행한다.
+
+※ 이 프로세스들은 일반 프로세스와 구분되도록 대괄호로 표시하며, 주로 PID 번호가 낮게 배정(systemd - 1, kthreadd - 2, ...)된다.
+
+<br/>
+
+## 시스템 runlevel
+### init 프로세스와 runlevel
+init는 시스템의 단계를 일곱 개로 정의하여 구분하고 각 단계에 따라 셸 스크립트를 실행하는데, 이 단계들을 런레벨이라고 한다.
+
+※ CentOS 7 버전 이후에는 runlevel 개념이 system target으로 대체되었다.
+
+<br/>
+
+## 시스템 종료
+### 종료 방법
+- shutdown -h now
+- halt
+- poweroff
+- init 0		// 시스템 종료
+- init 6		// 시스템 재시작
