Update 06장 사용자 계정 및 그룹 관리.md

--- a/01. Linux/06장 사용자 계정 및 그룹 관리.md
+++ b/01. Linux/06장 사용자 계정 및 그룹 관리.md
@@ -1,1 +1,65 @@
 # 사용자 계정 및 그룹 관리
+
+<br/>
+
+## 사용자 계정 관리 파일
+### 사용자 관리
+Linux는 **다중 사용자 시스템**이므로 사용자를 구별하고 사용자에게 적절한 자원을 할당해주는 방법이 필요하다.  
+사용자 계정은 사용자가 시스템에 접근할 수 있는 유일한 방법이다.
+
+### /etc/passwd
+사용자 계정 정보가 저장된 기본 파일
+
+`로그인ID:x:UID:GID:설명:홈 디렉터리:로그인 셸`
+- x: 사용자 암호를 저장하던 항목. 요즘은 **/etc/shadow** 파일에 별도로 저장한다.
+- UID: 사용자 ID. 0~999번과 65534번은 시스템 사용자를 위한 UID. **일반 사용자들은 1000**부터 할당.
+- GID: 그룹 ID. 시스템에 등록된 그룹에 대한 정보는 **/etc/group** 파일에 저장한다.
+- 설명: 사용자의 실명이나 부서명, 연락처 등 사용자에 대한 일반적인 정보를 기록. **작성 권장.**
+- 로그인 셸: 사용자의 로그인 셸을 지정.
+
+※ 로그인 ID가 다르더라도 UID가 같으면 같은 사용자로 판단한다. 따라서 UID **중복에 주의**해야 한다.
+
+ex) `root:x:0:0:root:/root:/bin/bash`
+
+### /etc/shadow 파일 내용
+사용자 암호에 관한 정보를 관리하는 파일  
+root 계정으로만 내용을 볼 수 있다.
+
+`로그인ID:암호:최종 변경일:MIN:MAX:WARNING:INACTIVE:EXPIRE:Flag`
+- 암호: 비밀번호가 암호화되어 저장. !!는 비밀번호가 설정된 적이 없다는 표시
+- MIN: 암호 변경 후, 사용해야 하는 최소 기간
+- MAX: 암호를 사용할 수 있는 최대 기간
+- WARNING: 암호가 만료되기 전에 경고를 시작하는 날수
+- INACTIVE: 암호가 만료된 후에도 이 항목에 지정한 날수 동안은 로그인이 가능
+- EXPIRE: 사용자 계정이 만료되는 날
+- Flag: 향후 사용할 목적으로 비워둔 항목
+
+ex) `user:!!:18820:0:99999:7:30::`
+
+### 비밀번호 암호화 원리
+ex) `cain:$6$X4er0Jr3$l6mHcTVtiBy7MNcJCIdl7nPDx0p6l1dZ9uUOVJ3JLq71Hsrf48WAOE9oXe9sduCr/YfXK1h.VA7WVqwVu2igT1:18820:0:99999:7:::`
+
+- $6: Hash 알고리즘을 SHA512로 사용. $1는 MD5, $5는 SHA256
+- $X4er0Jr3: Salt(난수) 값
+- $l6mHcTVtiBy7MNcJCIdl7nPDx0p6l1dZ9uUOVJ3JLq71Hsrf48WAOE9oXe9sduCr/YfXK1h.VA7WVqwVu2igT1:18820:0:99999:7::: : $6$X4er0Jr3가 해쉬된 값
+
+### 암호화 방식 조회 및 변경
+- 현재 사용 중인 암호화 알고리즘 조회: autoconfig --test | grep hashing
+- 현재 사용 중인 암호화 알고리즘 변경: autoconfig --passalgo=암호화 알고리즘 --update  
+  passwd로 암호를 변경할 때 바뀐 암호 알고리즘으로 적용된다.
+- 변경 확인: cat /etc/login.defs | grep ENCRYPT_METHOD
+
+### /etc/login.defs
+사용자 계정의 설정과 관련된 **기본 값**을 정의  
+기본 메일 디렉터리, 패스워드 에이징. 패스워드 최소 길이, UID 범위, umask 값 설정, 암호화 기법 등의 정보를 설정할 수 있다.
+
+### /etc/group 파일
+그룹에 대한 정보 저장  
+/etc/passwd 파일의 GID 항목에 지정된 그룹이 **기본 그룹**이며, 사용자가 속한 **2차 그룹**은 /etc/group 파일에 저장한다.
+
+`그룹 이름:x:GID:그룹 멤버`
+- x: 그룹 암호를 저장하던 항목. 요즘은 /etc/gshadow 파일에 별도로 저장한다.
+- 그룸 멤버: 그룹에 속한 멤버들의 사용자 계정 이름이며 쉼표로 사용자를 구별. 사용자의 2차 그룹
+
+ex) `user:x:1014:adminuser`
+
