Update 06장 사용자 계정 및 그룹 관리.md

--- a/01. Linux/06장 사용자 계정 및 그룹 관리.md
+++ b/01. Linux/06장 사용자 계정 및 그룹 관리.md
@@ -44,10 +44,10 @@ ex) `cain:$6$X4er0Jr3$l6mHcTVtiBy7MNcJCIdl7nPDx0p6l1dZ9uUOVJ3JLq71Hsrf48WAOE9oXe
 - $l6mHcTVtiBy7MNcJCIdl7nPDx0p6l1dZ9uUOVJ3JLq71Hsrf48WAOE9oXe9sduCr/YfXK1h.VA7WVqwVu2igT1:18820:0:99999:7::: : $6$X4er0Jr3가 해쉬된 값
 
 ### 암호화 방식 조회 및 변경
-- 현재 사용 중인 암호화 알고리즘 조회: autoconfig --test | grep hashing
-- 현재 사용 중인 암호화 알고리즘 변경: autoconfig --passalgo=암호화 알고리즘 --update  
+- 현재 사용 중인 암호화 알고리즘 조회: `autoconfig --test | grep hashing`
+- 현재 사용 중인 암호화 알고리즘 변경: `autoconfig --passalgo=암호화 알고리즘 --update`  
   passwd로 암호를 변경할 때 바뀐 암호 알고리즘으로 적용된다.
-- 변경 확인: cat /etc/login.defs | grep ENCRYPT_METHOD
+- 변경 확인: `cat /etc/login.defs | grep ENCRYPT_METHOD`
 
 ### /etc/login.defs
 사용자 계정의 설정과 관련된 **기본 값**을 정의  
@@ -63,3 +63,74 @@ ex) `cain:$6$X4er0Jr3$l6mHcTVtiBy7MNcJCIdl7nPDx0p6l1dZ9uUOVJ3JLq71Hsrf48WAOE9oXe
 
 ex) `user:x:1014:adminuser`
 
+<br/>
+
+## 사용자 계정 관리 명령
+### 사용자 계정 생성
+- useradd 로그인 ID: 사용자 계정 생성
+- useradd -u UID: UID 지정
+- useradd -o: UID 중복 허용. **아주 특별한 경우에만 허용해야 한다.**
+- useradd -g GID: 그룹의 GID 지정
+- useradd -G GID: 2차 그룹의 GID 지정
+- useradd -d 디렉터리: 홈 디렉터리 지정
+- useradd -s 셸: 기본 셸 지정
+- useradd -c 설명: 부가적인 설명 지정. 권장
+- useradd -D: 기본 설정 값을 설정하거나 출력. **옵션을 추가하면 설정 수정 가능.**
+- useradd -e 유효기간: EXPIRE 항목 설정(YYYY-MM-DD)
+- useradd -f 비활성 일수: INACTIVE 항목 설정
+
+ex) `useradd -s /bin/sh -d /home/user3 -u 2000 -g 1000 -G 3 -c "user3 test"user3`
+
+※ 계정 생성 시, 반드시 비밀번호 바로 설정
+
+### 기본 설정 값 확인(useradd -D)
+기본 설정 항목들은 **/etc/default/useradd** 파일에 저장된다.
+
+- HOME: 홈 디렉터리의 생성 위치
+- INACTIVE: -1이면 INACTIVE 기능 비활성화. 0이면 암호가 만료되자마자 바로 계정이 잠긴다.
+- SKEL: 홈 디렉터리에 복사할 기본 환경 파일의 위치
+- CREATE_MAIL_SPOOL: 메일 디렉터리의 생성 여부를 지정
+
+※ 설정을 변경하려면 `useradd -D -e 0`과 같은 식으로 옵션 추가
+
+### /etc/skel
+사용자 계정의 **홈 디렉터리에 공통으로 배포**해야 할 파일을 /etc/skel 디렉터리에 파일을 만들어 놓으면  
+**사용자 계정 생성 시에 자동으로 복사**
+
+### 사용자 계정 정보 수정
+usermod. 옵션들이 useradd 명령어를 통해 사용자 계정을 생성할 때 사용하는 옵션들이랑 거의 유사하다.
+
+※ 주의사항  
+- -o 옵션은 특수한 경우에만 사용해야 한다.  
+- -d 옵션을 통해 디렉터리를 바꾸더라도 디렉터리가 새로 생성되진 않으니 기존 디렉터리 파일들을 새 디렉터리를 만들어서 옮겨야 한다.  
+- -l 옵션은 로그인 ID를 바꾸는 것이다. -d 옵션과 같은 이유로 주의해야 한다.
+
+### 패스워드 에이징 관련 명령
+항목 | 명령 | 또 다른 명령
+:---: | :---: | :---:
+MIN | passwd -n 날수| chage -m 날수
+MAX | passwd -x 날수| chage -M 날수
+WARNING | passwd -w 날수| chage -W 날수
+INACTIVE | usermod -f 날수| chage -I 날수
+EXPIRE | usermod -e 날짜(YYYY-MM-DD)| chage -E 날자(YYYY-MM-DD)
+
+### 사용자 계정 삭제
+- userdel 로그인ID: 사용자 계정만 삭제. 홈 디렉터리나 파일들 유지
+- userdel -r 로그인ID: 사용자 계정과 홈 디렉터리가 함께 삭제
+- userdel -f 로그인ID: 사용자가 로그인 중이어도 강제로 삭제
+
+※ 홈 디렉터리 뿐만 아니라 사용자 계정 소유의 파일을 검색하여 삭제하는 것이 바람직하다.  
+ex) `find / -user UID -exec rm -r {} \;`
+
+<br/>
+
+## 그룹 관리 명령
+### 그룹 생성
+- groupadd 그룸명: GID를 가장 마지막 번호의 다음 번호로 자동 설정
+- groupadd -g GID: 지정 GID로 그룹 생성
+- groupadd -o: GID 중복 허용
+
+### 그룹 삭제
+groupdel 그룹명
+
+<
