--- a/01. Linux/06장 사용자 계정 및 그룹 관리.md
+++ b/01. Linux/06장 사용자 계정 및 그룹 관리.md
@@ -52,7 +52,7 @@ ex) `cain:$6$X4er0Jr3$l6mHcTVtiBy7MNcJCIdl7nPDx0p6l1dZ9uUOVJ3JLq71Hsrf48WAOE9oXe
 ### /etc/login.defs
 사용자 계정의 설정과 관련된 **기본 값**을 정의  
 기본 메일 디렉터리, 패스워드 에이징. 패스워드 최소 길이, UID 범위, umask 값 설정, 암호화 기법 등의 정보를 설정할 수 있다.
-
+  
 ### /etc/group 파일
 그룹에 대한 정보 저장  
 /etc/passwd 파일의 GID 항목에 지정된 그룹이 **기본 그룹**이며, 사용자가 속한 **2차 그룹**은 /etc/group 파일에 저장한다.
@@ -100,6 +100,9 @@ ex) `useradd -s /bin/sh -d /home/user3 -u 2000 -g 1000 -G 3 -c "user3 test"user3
 ### 사용자 계정 정보 수정
 usermod. 옵션들이 useradd 명령어를 통해 사용자 계정을 생성할 때 사용하는 옵션들이랑 거의 유사하다.
 
+- usermod -L 로그인ID: 계정 잠그기. **passwd -l 로그인ID**도 가능. usermod는 계정을 잠그지만, passwd는 비밀번호를 잠근다.
+- usermod -U 로그인ID: 계정 풀기. **passwd -u 로그인ID**도 가능.
+
 ※ 주의사항  
 - -o 옵션은 특수한 경우에만 사용해야 한다.  
 - -d 옵션을 통해 디렉터리를 바꾸더라도 디렉터리가 새로 생성되진 않으니 기존 디렉터리 파일들을 새 디렉터리를 만들어서 옮겨야 한다.  
@@ -122,6 +125,11 @@ EXPIRE | usermod -e 날짜(YYYY-MM-DD)| chage -E 날자(YYYY-MM-DD)
 ※ 홈 디렉터리 뿐만 아니라 사용자 계정 소유의 파일을 검색하여 삭제하는 것이 바람직하다.  
 ex) `find / -user UID -exec rm -r {} \;`
 
+※ 삭제 전 점검사항  
+1) 사용자(UID=1000 가정) 홈 디렉터리에서 업무 관련 파일 확인
+2) `find / -user 1000 -exec ls -l {} \; | /bin/mail -s "UID=1000 LIST" root`
+3) `vi /var/spool/mail/root` 메일 내용 확인
+
 <br/>
 
 ## 그룹 관리 명령
@@ -133,4 +141,16 @@ ex) `find / -user UID -exec rm -r {} \;`
 ### 그룹 삭제
 groupdel 그룹명
 
-<
+<br/>
+
+## 사용자 암호 Cracking
+### 암호 복잡성 관리 정책
+/etc/login.defs가 pw 기본 설정이라면 /etc/security/pwquality.conf은 **pw 복잡성 설정**이다.
+
+- maxrepeat = 숫자: 연속된 문자 허용 길이
+- lcredit = 숫자: 소문자 적어도 지정 숫자만큼 포함
+- ucredit = 숫자: 대문자 적어도 지정 숫자만큼 포함
+- dcredit = 숫자: 숫자 적어도 지정 숫자만큼 포함
+- ocredit = 숫자: 특수문자 적어도 지정 숫자만큼 포함
+
+pw 복잡성 설정을 바꾸고 싶으면 `authconfig --passminlen=8 --update` 처럼 명령어로 바꾸면 된다.
