Update 06장 사용자 계정 및 그룹 관리.md

--- a/01. Linux/06장 사용자 계정 및 그룹 관리.md
+++ b/01. Linux/06장 사용자 계정 및 그룹 관리.md
@@ -154,3 +154,28 @@ groupdel 그룹명
 - ocredit = 숫자: 특수문자 적어도 지정 숫자만큼 포함
 
 pw 복잡성 설정을 바꾸고 싶으면 `authconfig --passminlen=8 --update` 처럼 명령어로 바꾸면 된다.
+
+<br/>
+
+## 사용자 정보 관리 명령
+### who
+현재 시스템을 사용하는 사용자의 정보를 출력한다.  
+
+### w
+현재 시스템을 사용하는 사용자의 정보와 작업 정보를 출력한다.  
+who + 여러 정보. who 보다 자주 사용한다.  
+/var/run/utmp 파일을 참조한다.
+
+### last
+시스템에 로그인하고 로그아웃한 정보를 출력한다. 접속 성공 로그  
+사용자의 이름과 로그인한 시간, 로그아웃한 시간, 터미널 번호나 ip 주소 출력  
+/var/log/wtmp 파일을 참조한다.
+
+### lastb
+접속 실패 로그를 출력하는 것 말고는 last와 출력 내용이 비슷하다.  
+/var/log/btmp 파일을 참조한다.
+
+### lastlog
+데몬(시스템) 계정 값을 주로 확인한다. \*\*Never logged in\*\* 값이 유지되는지 확인  
+사용자의 마지막 로그인 시간, 호스트 명, 포트 등을 볼 수 있다.  
+/var/log/lastlog 파일을 참조한다.
