Update 06장 사용자 계정 및 그룹 관리.md

--- a/01. Linux/06장 사용자 계정 및 그룹 관리.md
+++ b/01. Linux/06장 사용자 계정 및 그룹 관리.md
@@ -179,3 +179,26 @@ who + 여러 정보. who 보다 자주 사용한다.
 데몬(시스템) 계정 값을 주로 확인한다. \*\*Never logged in\*\* 값이 유지되는지 확인  
 사용자의 마지막 로그인 시간, 호스트 명, 포트 등을 볼 수 있다.  
 /var/log/lastlog 파일을 참조한다.
+
+### root 권한 사용하기
+- su [계정]: 계정을 전환할 때, 계정의 환경 변수를 가져오지 않고 현재 계정의 환경 변수를 사용.  
+  ex) pwd -> /root
+- su - [계정]: 계정을 전환할 때, 계정의 환경 변수까지 가져온다.  
+  ex) pwd -> /home/user
+
+### sudo 권한 설정하기
+/etc/sudoers. 권한부여 설정
+
+사용자 계정 호스트=명령  
+ex) `root	ALL=(ALL)		ALL`  
+`kevin	ALL=/usr/sbin/useradd, /usr/sbin/usermod`
+
+명령은 절대 경로로, 명령이 여러 개일 경우 쉼표로 구분한다.  
+
+
+sudo 명령 사용 시 암호를 입력을 생략하려면 NOPASSWD 키워드를 이용한다.  
+`kevin	ALL=NOPASSWD:/usr/sbin/useradd, /usr/sbin/usermod`
+
+※ 주의사항  
+sudo 명령을 사용할 수 있는 사용자의 선정과 명령 선택은 매우 신중하게 처리해야 한다.  
+/etc/sudoers 파일을 수정할 땐, `:wq!`
