Update 06장 사용자 계정 및 그룹 관리.md

--- a/01. Linux/06장 사용자 계정 및 그룹 관리.md
+++ b/01. Linux/06장 사용자 계정 및 그룹 관리.md
@@ -202,3 +202,22 @@ sudo 명령 사용 시 암호를 입력을 생략하려면 NOPASSWD 키워드를
 ※ 주의사항  
 sudo 명령을 사용할 수 있는 사용자의 선정과 명령 선택은 매우 신중하게 처리해야 한다.  
 /etc/sudoers 파일을 수정할 땐, `:wq!`
+
+### 사용자 계정의 암호를 수정한다.
+- passwd -l 계정: 암호 잠그기. /etc/shadow 파일의 암호 부분 맨 앞을 보면 **!!가 있는 것들은 암호가 잠겼다는 뜻**이다. 그냥 !!만 있는거랑 다르다.
+- passwd -u 계정: 암호 해제. 암호 항목에서 !!가 빠진다.
+- passwd -d 계정: 사용자 암호 제거. 이러면 **로그인이 불가능**해진다.
+  
+- usermod -L 계정: 사용자 계정(ID)을 잠그는 명령어
+- passwd -l 계정: 사용자 암호(PW)를 잠그는 명령어
+
+※ 암호 관리  
+　1\) cracking(쉬운 암호를 사용하는 계정 찾기)
+ 
+　2-1) lock(usermod -L, passwd -l)
+ 
+　2-2) 계정 암호 expire 설정 -> 접속 시, 새 암호 입력 요청
+
+### 파일 및 디렉터리의 소유자와 소유 그룹 변경
+- chown 소유자:그룹 이름 파일명/디렉터리: 소유자와 그룹이름을 변경. **소유자.그룹 이름**도 가능하다.
+- chown -R: 하위 디렉터리의 소유자와 소유 그룹 변경
