Update 08장 파일 시스템 관리.md

--- a/01. Linux/08장 파일 시스템 관리.md
+++ b/01. Linux/08장 파일 시스템 관리.md
@@ -1,1 +1,18 @@
 # 파일 시스템 관리
+
+<br/>
+
+## Linux 파일 시스템의 종류
+### 파일 시스템이란?
+파일과 디렉터리의 집합을 구조적으로 관리하는 체계
+
+### Linux 고유의 디스크 기반 파일 시스템
+ext4 - 1EB(엑사 바이트. 1024 * 1024TB) 이상의 볼륨과 16TB 이상의 파일을 지원한다.
+
+### Linux에서 지원하는 다른 디스크 기반 파일 시스템
+- nfs - Network File System. 원격 서버의 디스크를 연결할 때 사용
+- ntfs - 윈도우의 NTFS를 지원하기 위한 파일 시스템
+
+### Linux의 특수 용도 가상 파일 시스템
+- swap - 스왑 영역을 관리하기 위한 파일 시스템  
+- tmpfs - Temporary File System. 메모리에 임시 파일을 저장하기 위한 파일 시스템. 시스템 재시작할 때마다 기존 내용이 없어진다.
