Update 08장 파일 시스템 관리.md

--- a/01. Linux/08장 파일 시스템 관리.md
+++ b/01. Linux/08장 파일 시스템 관리.md
@@ -67,3 +67,29 @@ umount
 ※ umount 에러  
 umount를 했는데 target is busy. 라는 메시지가 출력되면 해당 디렉터리를 누군가 사용중이란 뜻이다.  
 그럴 경우 umount하고자 하는 디렉터리로 이동해 umount를 실행하면 된다.
+
+<br/>
+
+## 디스크 관리
+### df
+디스크의 남은 공간에 대한 정보 출력
+
+- df -h: 디스크 사용량을 알기 쉬운(human. 사람이 보기 좋게) 단위(GB, MB, KB, ..)로 출력
+
+### du
+디스크의 사용 공간에 대한 정보 출력
+
+- du -s [디렉터리]: 특정 디렉터리의 전체 사용량 출력
+- du -h [디렉터리]: 디스크 사용량을 알기 쉬운(human. 사람이 보기 좋게) 단위(GB, MB, KB, ..)로 출력
+
+### fsck
+리눅스의 파일 시스템 검사
+
+- fsck 장치명: 일반적인 파일 시스템 검사
+- fsck -f 장치명: 파일 시스템 강제 검사
+
+### badblocks
+장치의 배드 블록 검사
+
+- badblocks -v 장치명: 검색 결과를 자세히 출력
+- badblocks -o 출력 파일 장치명: 검색 결과를 지정한 출력 파일에 저장
