Update 09장 압축 및 시스템 로그 관리.md

--- a/01. Linux/09장 압축 및 시스템 로그 관리.md
+++ b/01. Linux/09장 압축 및 시스템 로그 관리.md
@@ -1,1 +1,50 @@
 # 압축 및 시스템 로그 관리
+
+<br/>
+
+## 파일 아카이브와 압축
+### 파일 아카이브
+파일을 묶어서 하나로 만든 것  
+다른 시스템과 파일을 주고받거나, 백업을 하기 위해 여러 파일이나 디렉터리를 하나의 아카이브 파일로 생성하거나, 기존 아카이브에서 파일을 추출하기 위해 사용
+
+### tar
+**T**ape **AR**chive
+
+- **tar cvf 아카이브 파일명 파일명:** 아카이브 파일 생성
+
+- **tar tvf 아카이브 파일명:** 아카이브 파일 내용 보기
+
+- **tar xvf 아카이브 파일명:** 아카이브 파일 해제
+<br/>
+
+- **tar cvzf 아카이브 파일명 파일명:** 아카이브를 생성하면서 gzip으로 압축 실행
+
+- **tar tvzf 아카이브 파일명:** gzip으로 압축된 아카이브 파일 내용 보기
+
+- **tar xvzf 아카이브 파일명:** gzip으로 압축된 아카이브 파일 압축 해제
+<br/>
+
+- **tar cvjf 아카이브 파일명 파일명:** 아카이브를 생성하면서 bzip2로 압축 실행
+
+- **tar tvjf 아카이브 파일명:** bzip2로 압축된 아카이브 파일 내용 보기
+
+- **tar xvjf 아카이브 파일명:** bzip2로 압축된 아카이브 파일 압축 해제
+
+ex)  
+`tar cvf test.tar /test`  
+`tar cvzf test.tar.gz /test`  
+`tar cvjf test.tar.bz2 /test`
+
+기능과 옵션 | 내용
+:---: | :---:
+c | create.<br/>새로운 tar 파일 생성
+t | list.<br/>tar 파일의 내용 출력
+x | extract.<br/>tar 파일에서 원본 파일 추출
+v | verbose.<br/>처리하고 있는 파일 정보 출력
+f | file.<br/>아카이브 파일이나 테이프 장치 지정
+z | gzip.<br/>gzip로 압축 또는 해제
+j | bzip2.<br/>bzip2로 압축 또는 해제
+
+※ gzip과 bzip2  
+- **gzip:** 일반적인 압축 방법이다.
+- **bzip2:** gzip보다 압축률이 좋으나, CPU overhead가 gzip보다 높다.
