Update 09장 압축 및 시스템 로그 관리.md

--- a/01. Linux/09장 압축 및 시스템 로그 관리.md
+++ b/01. Linux/09장 압축 및 시스템 로그 관리.md
@@ -48,3 +48,25 @@ j | bzip2.<br/>bzip2로 압축 또는 해제
 ※ gzip과 bzip2  
 - **gzip:** 일반적인 압축 방법이다.
 - **bzip2:** gzip보다 압축률이 좋으나, CPU overhead가 gzip보다 높다.
+
+<br/>
+
+## 시스템 로그
+### 로그
+커널과 Linux 시스템이 제공하는 여러 서비스와 응용 프로그램이 발생시키는 메시지  
+대부분 /var/log 디렉터리에 위치
+
+로그 파일의 소유자는 거의 대부분 root  
+접근 권한은 대부분 600으로 설정  
+보안의 측면에서도 일반 사용자가 로그를 볼 수 없게 하는것이 바람직  
+
+### 주요 로그 파일
+로그 파일 | 내용
+:---: | :---:
+/var/log/messages | 시스템 공통 로그로 커널이나 데몬에서 발생하는 대부분의 메시지 기록.<br/>시간 순 정보 기록. 장애 시 아래에서 위로(ex. ?error) 검색 권장
+/var/log/bootlog | 부팅 시, 서비스 데몬의 실행 상태 기록
+/var/log/cron | cron 명령의 실행 결과와 오류 메시지 기록
+/var/log/secure | telnet, ssh, su, sudo 등의 사용자 로그인 인증 내용 기록
+/var/log/lastlog | 각 계정의 최근 로그인 정보 기록.<br/>lastlog 명령으로 확인 가능
+/var/log/btmp | 실패한 로그인 정보 기록.<br/>lastb 명령으로 확인 가능
+/var/log/wtmp | 성공한 로그인 정보 기록.<br/>last 명령으로 확인 가능
