Update 컨테이너 시스템 자원 제한 및 부하 모니터링.md

--- a/03. Docker/실습/컨테이너 시스템 자원 제한 및 부하 모니터링.md
+++ b/03. Docker/실습/컨테이너 시스템 자원 제한 및 부하 모니터링.md
@@ -64,3 +64,23 @@ htop
 # cadvisor에서 컨테이너 CPU 정보 및 Usage per Core 확인
 # 확인 후, 빠르게 docker stop으로 컨테이너 종료
 ```
+
+<br/>
+
+### Memory 자원 제한
+#### Memory 지정(--memory, -m 용량)
+```shell
+docker container run -d --rm --memory=1g --name=nginx_mem_1g nginx:1.19
+docker container inspect nginx_mem_1g | grep Memory
+
+# cAdvisor에서 Memory 확인
+# swap은 지정한 메모리에 2배로 할당되어 있는 것을 확인할 수 있다.
+```
+
+#### Memory Swap 지정(--memory-swap=용량)
+```shell
+docker container run -d --rm -m 512m --memory-swap=1g --name=nginx_mem_1m nginx:1.19
+docker container inspect nginx_mem_1m | grep -i memory
+
+# cAdvisor에서 Memory 확인
+```
