--- a/01. Linux/기타/방화벽 설정.md
+++ b/01. Linux/기타/방화벽 설정.md
@@ -49,3 +49,54 @@ firewall-cmd --reload
 ```bash
 firewall-cmd --list-all
 ```
+
+<br/>
+
+### Ubuntu
+우분투는 기본적으로 inbound에 대한 모든 패킷을 거부하고, outbound에 대한 모든 패킷은 허용한다.
+
+#### UFW 설치 및 실행
+```bash
+apt-get install ufw                   # ufw가 설치가 안 되어 있을 경우
+ufw enable
+```
+
+#### 서비스/포트 허용
+```bash
+ufw allow http
+ufw allow https
+
+ufw allow 80/tcp
+ufw allow 443/tcp
+```
+
+#### 서비스/포트 거부
+```bash
+ufw deny http
+ufw deny https
+
+ufw deny 80/tcp
+ufw deny 443/tcp
+```
+
+#### 기타 허용 및 거부
+```bash
+ufw allow from 192.168.0.201                              # 특정 IP 접근 허용
+ufw allow from 192.168.0.0/24                             # 특정 IP대역 접근 허용
+ufw allow 1000:2000/tcp                                   # Port 구간 접근 허용
+ufw allow from 192.168.0.202 to any port 22 proto tcp     # 특정 IP, Port, Protocol 허용
+
+ufw deny from 192.168.0.201
+ufw deny from 192.168.0.0/24
+ufw deny 1000:2000/tcp
+ufw deny from 192.168.0.202 to any port 22 proto tcp
+```
+
+#### UFW 규칙 제거
+```bash
+ufw delete allow http
+ufw delete allow 80/tcp
+ufw delete allow from 192.168.0.201
+ufw delete allow 1000:2000/txp
+ufw delete allow from 192.168.0.202 to any port 22 proto tcp
+```
